# Clutch

./: BUILD.md  Cargo.toml  Clutch_BuildPrompt.md  README.md  SKILL.md
src/: config.rs  filesystem.rs  main.rs  state.rs  tray.rs  window.rs
ui/: app.slint  card.slint  panel.slint  picker.slint  pill.slint
